--- a/src/app/pages/signup/signup.html
+++ b/src/app/pages/signup/signup.html
@@ -10,7 +10,7 @@
 <ion-content>
 
   <div class="signup-logo">
-    <img src="assets/img/appicon.svg" alt="Ionic Logo">
+    <a href="//www.urban-hawks.com/"  target="_blank"><img src="assets/img/Urban-Hawks-logo-wide.png" alt="Ionic logo"></a>
   </div>
 
   <form #signupForm="ngForm" novalidate>
