--- a/src/app/pages/support/support.html
+++ b/src/app/pages/support/support.html
@@ -10,7 +10,7 @@
 
 <ion-content>
   <div class="support-logo">
-    <img src="assets/img/appicon.svg" alt="Ionic Logo">
+    <a href="//www.urban-hawks.com/"  target="_blank"><img src="assets/img/Urban-Hawks-logo-wide.png" alt="Ionic logo"></a>
   </div>
 
   <form #submitForm="ngForm" novalidate (ngSubmit)="submit(submitForm)">
