wo list page (just cloned sessions page +refresher, for now)

--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -11,4 +11,7 @@
   <ion-tab label="About" icon="information-circle" href="/app/tabs/(about:about)">
     <ion-router-outlet stack name="about"></ion-router-outlet>
   </ion-tab>
+  <ion-tab label="Work Orders" icon="calendar" href="/app/tabs/(workorders:workorders)">
+    <ion-router-outlet stack name="workorders"></ion-router-outlet>
+  </ion-tab>
 </ion-tabs>
