--- a/src/app/pages/workorder-filter/workorder-filter.html
+++ b/src/app/pages/workorder-filter/workorder-filter.html
@@ -5,7 +5,7 @@
     </ion-buttons>
 
     <ion-title>
-      Filter Sessions
+      Filter Work Orders
     </ion-title>
 
     <ion-buttons slot="end">
