--- a/src/app/pages/workorder-detail/workorder-detail.html
+++ b/src/app/pages/workorder-detail/workorder-detail.html
@@ -1,22 +1,22 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text="Schedule" defaultHref="/app/tabs/(workorder:workorder)"></ion-back-button>
+      <ion-back-button text="Work Orders" defaultHref="/app/tabs/(workorders:workorders)"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{session?.name}}</ion-title>
+    <ion-title>{{workorder?.name}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <div *ngIf="session">
-    <h1>{{session.name}}</h1>
-    <h4 *ngFor="let speaker of session?.speakers">
+  <div *ngIf="workorder">
+    <h1>{{workorder.name}}</h1>
+    <h4 *ngFor="let speaker of workorder?.speakers">
       {{speaker.name}}
     </h4>
     <p>
-      {{session.timeStart}} - {{session.timeEnd}}
+      {{workorder.timeStart}} - {{workorder.timeEnd}}
     </p>
-    <p>{{session.location}}</p>
-    <p>{{session.description}}</p>
+    <p>{{workorder.location}}</p>
+    <p>{{workorder.description}}</p>
   </div>
 </ion-content>
