forgotPWD page ... zapoceto

--- a/src/app/pages/@user/login/login.html
+++ b/src/app/pages/@user/login/login.html
@@ -60,6 +60,9 @@
       <ion-col>
         <ion-button (click)="onSignup()" color="light" expand="block">Signup</ion-button>
       </ion-col>
+      <ion-col>
+        <ion-button (click)="onForgotPassword(loginForm)" color="light" expand="block">Forgot Password</ion-button>
+      </ion-col>
     </ion-row>
   </form>
 
