--- a/src/app/pages/@account/login/login.scss
+++ b/src/app/pages/@account/login/login.scss
@@ -1,4 +1,5 @@
-page-support {
+page-login {
+
   .list {
     padding: 20px 0;
     margin-bottom: 0;
@@ -13,16 +14,22 @@ page-support {
   }
 
   $md: 768px;
+  // @media screen and (min-width: $breakpoint-min-sm) {
   @media screen and (min-width: $md) {
     form {
+      // max-width: 40vw;
+      // max-width: 1000px;
       max-width: 745px;
     }
   }
+
 }
 
 // .md {
 //   page-login {
 //     form {
+//       // max-width: 40vw;
+//       // max-width: 1000px;
 //       max-width: 745px;
 //     }
 //   }
