--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
       <ion-content>
 
         <ion-list>
+        <!-- <ion-list inset lines="none"> -->
           <ion-list-header>
             Navigate
           </ion-list-header>
