--- a/src/app/pages/@account/account/account.html
+++ b/src/app/pages/@account/account/account.html
@@ -13,6 +13,7 @@
     <h2>{{username}}</h2>
 
     <ion-list inset>
+    <!-- <ion-list inset lines="none"> -->
       <ion-item (click)="updatePicture()">Update Picture</ion-item>
       <ion-item (click)="changeUsername()">Change Username</ion-item>
       <ion-item (click)="changePassword()">Change Password</ion-item>
