.install pwa btn, pwa in production build

--- a/src/app/pages/@account/login/login.html
+++ b/src/app/pages/@account/login/login.html
@@ -15,6 +15,7 @@
     </a>
   </div> -->
   <account-logo></account-logo>
+  <!-- <install-pwa-button></install-pwa-button> -->
 
   <!-- <form #loginForm="ngForm" novalidate> -->
   <form #loginForm="ngForm" validate>
